ported old risk page to new multi-edit model. updated common styles to include some multi-edit styles... perhaps more later. minor fixes to su-gaols page. updated and fixed su-print-behavior, and multi-edit behaviors.

--- a/src/behaviors/su-print-behavior.html
+++ b/src/behaviors/su-print-behavior.html
@@ -187,7 +187,7 @@
             for(y in med){
               var medHistory=med[y];
               var date=medHistory.log.time;
-              var formattedDate=new Date(date);yy
+              var formattedDate=new Date(date);
               var printDate=formattedDate.getDay()+"."+formattedDate.getMonth()+"."+formattedDate.getFullYear();
               printable.document.write("<p style='font-weight:bold;'>"+formattedDate+"</p>");
               printable.document.write("<ul>");
