--- a/src/pages/care-plan/su-goals/su-goals.html
+++ b/src/pages/care-plan/su-goals/su-goals.html
@@ -64,11 +64,7 @@
       path="homes/[[home]]/patients/[[patient]]/personalGoals">
     </firebase-document>
 
-    <style include="common-styles">
-      :host{
-
-      }
-    </style>
+    <style include="common-styles"></style>
 
     <guuey-new-goal-modal
       id="addGoalModal"
