--- a/src/pages/care-plan/su-risk/dependencies.html
+++ b/src/pages/care-plan/su-risk/dependencies.html
@@ -7,20 +7,22 @@
 <link rel="import" href="../../../../bower_components/paper-dialog/paper-dialog.html" />
 <link rel="import" href="../../../../bower_components/paper-input/paper-input.html" />
 <link rel="import" href="../../../../bower_components/paper-input/paper-textarea.html" />
-<link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
 <link rel="import" href="../../../../bower_components/vaadin-combo-box/vaadin-combo-box.html" />
-<link rel="import" href="../../../../bower_components/iron-icon/iron-icon.html" />
 <link rel="import" href="../../../../bower_components/iron-icons/iron-icons.html" />
-<link rel="import" href="../../../../bower_components/iron-icons/editor-icons.html" />
 <link rel="import" href="../../../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html" />
+<link rel="import" href="../../../../bower_components/neon-animation/neon-animated-pages.html" />
 
 <link rel="import" href="../../../elements/guuey-text-input/guuey-text-input.html" />
 <link rel="import" href="../../../elements/guuey-date-input/guuey-date-input.html" />
 <link rel="import" href="../../../elements/guuey-slider/guuey-slider.html" />
 <link rel="import" href="../../../elements/su-header/su-header.html" />
+<link rel="import" href="../../../elements/media-queries/media-queries.html" />
+<link rel="import" href="su-risk-edit-view.html" />
+<link rel="import" href="su-risk-multi-view.html" />
 
 <link rel="import" href="../../../behaviors/fab-animation-behavior.html" />
 <link rel="import" href="../../../behaviors/animations/care-plan-animation.html" />
+<link rel="import" href="../../../behaviors/su-resize-behavior.html" />
 <link rel="import" href="../../../behaviors/su-print-behavior.html" />
 
 <link rel="import" href="../../../styles/common-styles.html" />
