--- a/src/styles/common-styles.html
+++ b/src/styles/common-styles.html
@@ -204,6 +204,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         display:inline-block;
         text-align:center;
       }
+      /* edit/multi styles*/
+      .editViewCard{
+        width:100%;
+      }
     </style>
   </template>
 </dom-module>
