updated animations for nested neon-animated pages to use scale up and scale down entry animations. removed console.logs from su-resize-behavior

--- a/src/pages/care-plan/su-goals/su-goals.html
+++ b/src/pages/care-plan/su-goals/su-goals.html
@@ -108,7 +108,9 @@
           -->
           <neon-animated-pages
             attr-for-selected="name"
-            selected="[[pageState]]">
+            selected="[[pageState]]"
+            entry-animation="scale-up-animation"
+            exit-animation="scale-down-animation">
 
             <su-goals-multi-view
               name="multi-view"
