--- a/src/pages/care-plan/su-risk/su-risk.html
+++ b/src/pages/care-plan/su-risk/su-risk.html
@@ -123,6 +123,8 @@
         </paper-fab>
 
           <neon-animated-pages
+            entry-animation="scale-up-animation"
+            exit-animation="scale-down-animation"
             attr-for-selected="name"
             selected="[[pageState]]">
 
