--- a/src/pages/care-plan/su-risk/su-risk-edit-view.html
+++ b/src/pages/care-plan/su-risk/su-risk-edit-view.html
@@ -2,6 +2,10 @@
 <link rel="import" href="../../../../bower_components/paper-card/paper-card.html" />
 <link rel="import" href="../../../../bower_components/vaadin-combo-box/vaadin-combo-box.html" />
 
+<!--temp animations till hero animations work-->
+<link rel="import" href="../../../../bower_components/neon-animation/animations/scale-up-animation.html" />
+<link rel="import" href="../../../../bower_components/neon-animation/animations/scale-down-animation.html" />
+
 <link rel="import" href="../../../elements/guuey-text-input/guuey-text-input.html" />
 <link rel="import" href="../../../elements/guuey-slider/guuey-slider.html" />
 <link rel="import" href="../../../elements/guuey-date-input/guuey-date-input.html" />
@@ -103,7 +107,7 @@
       },
       behaviors:[
         Polymer.editViewResizeBehavior,
-        Polymer.multiEditAnimationBehavior
+        //Polymer.multiEditAnimationBehavior
       ]
     });
 
