--- a/src/behaviors/su-resize-behavior.html
+++ b/src/behaviors/su-resize-behavior.html
@@ -135,16 +135,128 @@
 
         };
         if(this.page==="su-medical"){
+          //working off max 900
+          var tableScrollLabelColor="transparent"
+          var tableOverflow="unset"
+          var tbodyDisplay="table-row-group"
+          var theadTrPosition="unset"
+          var theadTrDisplay="table-row"
+          var theadTrTdWidth="unset"
+          var tdThMinWidth="unset"
+          var tdThLastWidth="unset"
 
+          if(dimensions.base.query900){
+            tableScrollLabelColor="inherit"
+            tableOverflow="scroll"
+            tbodyDisplay="block"
+            theadTrPosition="relative"
+            theadTrDisplay="block"
+            theadTrTdWidth="150px"
+            tdThMinWidth="150px"
+            tdThLastWidth="150px"
+          };
+          this.customStyle["--table-scroll-lable-color"]=tableScrollLabelColor;
+          this.customStyle["--table-overflow"]=tableOverflow;
+          this.customStyle["--tbody-display"]=tbodyDisplay;
+          this.customStyle["--thead-tr-position"]=theadTrPosition;
+          this.customStyle["--thead-tr-display"]=theadTrDisplay;
+          this.customStyle["--thead-tr-td-width"]=theadTrTdWidth;
+          this.customStyle["--td-th-min-width"]=tdThMinWidth;
+          this.customStyle["--td-th-last-width"]=tdThLastWidth;
+          this.updateStyles();
         };
         if(this.page==="su-medication"){
+          // 1000 and  640 px
+          var tableScrollLabelColor="transparent"
+          var tableOverflow="unset"
+          var tbodyDisplay="table-row-group"
+          var theadTrPosition="unset"
+          var theadTrDisplay="table-row"
+          var theadTrTdWidth="unset"
+          var tdThMinWidth="unset"
+          var tdThLastWidth="unset"
 
+          var mainFabPosition="absolute";
+          var mainFabTop="-25px";
+          var mainFabBottom="unset";
+          var mainFabRight="-25px";
+          if(dimensions.base.query640){
+            //table style
+            tableScrollLabelColor="inherit"
+            tableOverflow="scroll"
+            tbodyDisplay="block"
+            theadTrPosition="relative"
+            theadTrDisplay="block"
+            theadTrTdWidth="150px"
+            tdThMinWidth="150px"
+            tdThLastWidth="150px"
+
+            //fab styles
+            mainFabPosition="fixed";
+            mainFabTop="unset";
+            mainFabBottom="5%";
+            mainFabRight="5%";
+          } else if(dimensions.base.query900){
+
+            //table style
+            tableScrollLabelColor="inherit"
+            tableOverflow="scroll"
+            tbodyDisplay="block"
+            theadTrPosition="relative"
+            theadTrDisplay="block"
+            theadTrTdWidth="150px"
+            tdThMinWidth="150px"
+            tdThLastWidth="150px"
+
+            //fab styles
+            mainFabPosition="absolute";
+            mainFabTop="-25px";
+            mainFabBottom="unset";
+            mainFabRight="-25px";
+          };
+          this.customStyle["--table-scroll-lable-color"]=tableScrollLabelColor;
+          this.customStyle["--table-overflow"]=tableOverflow;
+          this.customStyle["--tbody-display"]=tbodyDisplay;
+          this.customStyle["--thead-tr-position"]=theadTrPosition;
+          this.customStyle["--thead-tr-display"]=theadTrDisplay;
+          this.customStyle["--thead-tr-td-width"]=theadTrTdWidth;
+          this.customStyle["--td-th-min-width"]=tdThMinWidth;
+          this.customStyle["--td-th-last-width"]=tdThLastWidth;
+
+          this.customStyle["--main-fab-position"]=mainFabPosition;
+          this.customStyle["--main-fab-top"]=mainFabTop;
+          this.customStyle["--main-fab-bottom"]=mainFabBottom;
+          this.customStyle["--main-fab-right"]=mainFabRight;
+          this.updateStyles();
         };
         if(this.page==="su-pre"){
+          //uses 640px
+            var mainFabPosition="absolute";
+            var mainFabTop="-25px";
+            var mainFabBottom="unset";
+            var mainFabRight="-25px";
+          if(dimensions.base.query640){
+            //fab styles
+            mainFabPosition="fixed";
+            mainFabTop="unset";
+            mainFabBottom="5%";
+            mainFabRight="5%";
+          };
+          this.customStyle["--main-fab-position"]=mainFabPosition;
+          this.customStyle["--main-fab-top"]=mainFabTop;
+          this.customStyle["--main-fab-bottom"]=mainFabBottom;
+          this.customStyle["--main-fab-right"]=mainFabRight;
+          this.updateStyles();
 
         };
         if(this.page==="su-profile"){
-
+          //uses 900
+          var appGridColumns="2";
+          if(dimensions.base.query900){
+            appGridColumns="1";
+          };
+          this.customStyle["--app-grid-columns"]=appGridColumns;
+          this.updateStyles();
         };
         if(this.page==="su-risk"){
           var mainFabPosition="absolute";
