--- a/src/pages/care-plan/su-medical/dependencies.html
+++ b/src/pages/care-plan/su-medical/dependencies.html
@@ -5,12 +5,13 @@
 <link rel="import" href="../../../../bower_components/paper-input/paper-input.html" />
 <link rel="import" href="../../../../bower_components/paper-button/paper-button.html" />
 <link rel="import" href="../../../../bower_components/paper-item/paper-item.html" />
-<link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
 
 <link rel="import" href="../../../elements/firebase-storage/firebase-storage.html" />
 <link rel="import" href="../../../elements/su-header/su-header.html" />
+<link rel="import" href="../../../elements/media-queries/media-queries.html" />
 
 <link rel="import" href="../../../behaviors/animations/care-plan-animation.html" />
 <link rel="import" href="../../../behaviors/su-print-behavior.html" />
+<link rel="import" href="../../../behaviors/su-resize-behavior.html" />
 
 <link rel="import" href="../../../styles/common-styles.html" />
