--- a/src/pages/care-plan/su-medical/su-medical.html
+++ b/src/pages/care-plan/su-medical/su-medical.html
@@ -5,6 +5,10 @@
 
   <template>
 
+    <media-queries
+      dimensions="{{dimensions}}">
+    </media-queries>
+
     <firebase-storage
       id="pdf"
       app-name="main"
@@ -22,11 +26,6 @@
       path="homes/[[home]]/patients/[[patient]]/uploads"
       data={{uploadsData}}>
     </firebase-query>
-
-    <iron-media-query
-      query="(max-width:900px)"
-      query-matches="{{query900}}">
-    </iron-media-query>
 
     <style include="common-styles">
       :host{
@@ -142,11 +141,12 @@
         }
       },
       observers:[
-        "editQuery(query900)"
+
       ],
       behaviors:[
         Polymer.carePlanAnimation,
-        Polymer.suPrintBehavior
+        Polymer.suPrintBehavior,
+        Polymer.suResizeBehavior
       ],
       fileChange:function(e) {
         var file = e.target.files[0];
@@ -179,39 +179,6 @@
       openFile:function(e){
         window.open(e.model.upload.location);
       },
-      editQuery:function(query900){
-        if(query900){
-          //table style
-          this.customStyle["--table-scroll-lable-color"]="inherit";
-          this.customStyle["--table-overflow"]="scroll";
-          this.customStyle["--tbody-display"]="block";
-          this.customStyle["--thead-tr-position"]="relative";
-          this.customStyle["--thead-tr-display"]="block";
-          this.customStyle["--thead-tr-td-width"]="150px";
-          this.customStyle["--td-th-min-width"]="150px";
-          this.customStyle["--td-th-last-width"]="150px";
-          //fab style
-          this.customStyle["--main-fab-position"]="fixed";
-          this.customStyle["--main-fab-top"]="unset";
-          this.customStyle["--main-fab-bottom"]="5%";
-
-          this.updateStyles();
-        } else {
-          this.customStyle["--table-scroll-lable-color"]="transparent";
-          this.customStyle["--table-overflow"]="unset";
-          this.customStyle["--tbody-display"]="table-row-group";
-          this.customStyle["--thead-tr-position"]="unset";
-          this.customStyle["--thead-tr-display"]="table-row";
-          this.customStyle["--thead-tr-td-width"]="unset";
-          this.customStyle["--td-th-min-width"]="unset";
-          this.customStyle["--td-th-last-width"]="unset";
-
-          this.customStyle["--main-fab-position"]="absolute";
-          this.customStyle["--main-fab-top"]="235px";
-          this.customStyle["--main-fab-bottom"]="unset";
-          this.updateStyles();
-        };
-      }
     });
 
   </script>
