--- a/src/pages/care-plan/su-medication/dependencies.html
+++ b/src/pages/care-plan/su-medication/dependencies.html
@@ -16,14 +16,15 @@
 <link rel="import" href="../../../../bower_components/iron-icons/editor-icons.html" />
 <link rel="import" href="../../../../bower_components/paper-item/paper-item.html" />
 <link rel="import" href="../../../../bower_components/iron-icons/communication-icons.html" />
-<link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
 
 <link rel="import" href="../../../elements/guuey-custom-text-input/guuey-custom-text-input.html" />
 <link rel="import" href="../../../elements/guuey-time-chunk-selector/guuey-time-chunk-selector.html" />
 <link rel="import" href="../../../elements/guuey-weekday-selector/guuey-weekday-selector.html" />
 <link rel="import" href="../../../elements/su-header/su-header.html" />
+<link rel="import" href="../../../elements/media-queries/media-queries.html" />
 
 <link rel="import" href="../../../behaviors/animations/care-plan-animation.html" />
 <link rel="import" href="../../../behaviors/su-print-behavior.html" />
+<link rel="import" href="../../../behaviors/su-resize-behavior.html" />
 
 <link rel="import" href="../../../styles/common-styles.html" />
